--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   - 3.6
 
 install:
-  - pip install pyyaml jinja2
+  - pip install pyyaml jinja2 requests
   - git config --global user.name "astrobot"
   - git config --global user.email "astrobot"
   - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
