--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
   - git checkout gh-pages
   - cp deploy/* .
   - git add status.html style.css
-  - git commit -m "Updated dashboard"
+  - git commit -m "Updated dashboard" || true
   - if [[ $TRAVIS_EVENT_TYPE != pull_request && $TRAVIS_BRANCH == master ]]; then git push -q -f https://$GITHUB_USER:$GITHUB_API_KEY@github.com/$TRAVIS_REPO_SLUG gh-pages; fi
