astropy-tutorials don't use RTD anymore

--- a/dashboard.yml
+++ b/dashboard.yml
@@ -36,7 +36,7 @@
     badges: travis, circleci
 
   - repo: astropy/astropy-tutorials
-    badges: travis, circleci, rtd
+    badges: travis, circleci
 
   - repo: astropy/astropy-bot
     badges: travis, codecov
