Changing api_key to token

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - git fetch --all
 
 # This auto-deploys the generated website to the gh-pages branch. This requires the
-# GITHUB_USER and GITHUB_API_KEY variables to be set as secure variables through
+# GITHUB_USER and GITHUB_TOKEN variables to be set as secure variables through
 # the Travis web interface. The former should be set to a GitHub username, and the
 # second to a personal access token with scope 'public_repo'
 
@@ -29,4 +29,4 @@ script:
   - cp deploy/* .
   - git add status.html style.css
   - git commit -m "Updated dashboard" || true
-  - if [[ $TRAVIS_EVENT_TYPE != pull_request && $TRAVIS_BRANCH == master ]]; then git push -q -f https://$GITHUB_USER:$GITHUB_API_KEY@github.com/$TRAVIS_REPO_SLUG gh-pages; fi
+  - if [[ $TRAVIS_EVENT_TYPE != pull_request && $TRAVIS_BRANCH == master ]]; then git push -q -f https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG gh-pages; fi
