Fixing up travis command to actually commit the right file

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ script:
   - cp static/style.css deploy/
   - git checkout gh-pages
   - cp deploy/* .
-  - git add status.html style.css
+  - git add index.html style.css
   - git commit -m "Updated dashboard" || true
   - if [[ $TRAVIS_EVENT_TYPE != pull_request && $TRAVIS_BRANCH == master ]]; then git push -q -f https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG gh-pages; fi
