Updating dependencies and adding website field

--- a/dashboard.yml
+++ b/dashboard.yml
@@ -3,29 +3,30 @@
   packages:
 
   - repo: pyviz/panel
-    badges: travis, appveyor, pypi, conda, conda-forge, defaults
+    badges: travis, appveyor, codecov, pypi, conda, conda-forge, defaults, gh-pages
 
   - repo: pyviz/hvplot
-    badges: travis, appveyor, pypi, conda, conda-forge, defaults
+    badges: travis, appveyor, pypi, conda, conda-forge, defaults, gh-pages
 
   - repo: pyviz/datashader
     badges: travis, appveyor, pypi, conda, conda-forge, defaults
 
   - repo: pyviz/geoviews
-    badges: travis, appveyor, pypi, conda, conda-forge, defaults
+    badges: travis, appveyor, pypi, conda, conda-forge, defaults, gh-pages
 
   - repo: ioam/holoviews
     appveyor_project: pyviz/holoviews
-    badges: travis, appveyor, coveralls, pypi, conda, conda-forge, defaults
+    badges: travis, coveralls, pypi, conda, conda-forge, defaults
 
   - repo: pyviz/colorcet
-    badges: pypi, conda-forge, defaults
+    badges: pypi, conda-forge, defaults, gh-pages
 
   - repo: pyviz/param
+    appveyor_project: Ioam/param
     badges: travis, appveyor, pypi, conda, conda-forge, defaults
 
   - repo: ioam/paramtk
-    badges: travis, appveyor, pypi, conda, conda-forge
+    badges: pypi
 
   - repo: ioam/parambokeh
     appveyor_project: Ioam/parambokeh
@@ -39,14 +40,14 @@
   packages:
 
   - repo: pyviz/pyviz
-    badges: travis, appveyor, pypi, conda, conda-forge, defaults
+    badges: travis, appveyor, pypi, conda, conda-forge, defaults, gh-pages
 
   - repo: pyviz/EarthSim
-    badges: travis, appveyor, conda-forge
+    badges: travis, appveyor, conda-forge, gh-pages
 
   - repo: pyviz-topics/EarthML
     appveyor_project: jsignell/earthml
-    badges: travis, appveyor
+    badges: travis, appveyor, gh-pages
 
 
 - name: Tooling and Infrastructure packages
@@ -54,10 +55,10 @@
   packages:
 
   - repo: pyviz/nbsite
-    badges: travis, pypi, conda, conda-forge
+    badges: travis, pypi, conda, conda-forge, gh-pages
 
   - repo: pyviz/nbsmoke
-    badges: travis, appveyor, pypi, conda, conda-forge
+    badges: travis, appveyor, pypi, conda, conda-forge, gh-pages
 
   - repo: pyviz/autover
     badges: travis, appveyor, pypi, conda, conda-forge
@@ -72,34 +73,71 @@
 
   packages:
 
-  - repo: ContinuumIO/intake
+  - repo: bokeh/bokeh
     badges: travis, appveyor, pypi, conda, conda-forge, defaults
+    conda_channel: bokeh
+    appveyor_project: bokeh-integrations/bokeh
+
+  - repo: dask/dask
+    appveyor_project: daskdev/dask
+    badges: travis, appveyor, coveralls, rtd, pypi, conda-forge, defaults
+
+  - repo: numpy/numpy
+    appveyor_project: charris/numpy
+    badges: travis, appveyor, codecov, rtd, pypi, conda-forge, defaults
+
+  - repo: pandas-dev/pandas
+    badges: travis, appveyor, codecov, rtd, pypi, conda-forge, defaults
+
+  - repo: pydata/xarray
+    appveyor_project: shoyer/xray
+    badges: travis, appveyor, coveralls, rtd, pypi, conda-forge, defaults
+
+- name: Data Ingestion packages
+
+  packages:
+
+  - repo: ContinuumIO/intake
+    badges: travis, appveyor, rtd, pypi, conda, conda-forge, defaults
     pypi_name: intake
     conda_channel: intake
     appveyor_project: jsignell/intake
 
   - repo: ContinuumIO/intake-xarray
-    badges: travis, appveyor, pypi, conda, conda-forge, defaults
+    badges: travis, appveyor, rtd, pypi, conda, conda-forge, defaults
     conda_channel: intake
     appveyor_project: jsignell/intake-xarray
 
   - repo: ContinuumIO/intake-parquet
     conda_channel: intake
-    badges: travis, pypi, conda, conda-forge
-
-  - repo: dask/dask
-    appveyor_project: daskdev/dask
-    badges: travis, appveyor, coveralls, pypi, conda-forge, defaults
-
-  - repo: pandas-dev/pandas
-    badges: travis, appveyor, codecov, pypi, conda-forge, defaults
-
-  - repo: pydata/xarray
-    appveyor_project: shoyer/xray
-    badges: travis, appveyor, coveralls, pypi, conda-forge, defaults
+    badges: travis, rtd, pypi, conda, conda-forge
 
   - repo: zarr-developers/zarr
-    badges: travis, appveyor, coveralls, pypi, conda-forge, defaults
+    badges: travis, appveyor, coveralls, rtd, pypi, conda-forge, defaults
 
   - repo: dask/fastparquet
-    badges: travis, pypi, conda-forge, defaults
+    badges: travis, rtd, pypi, conda-forge, defaults
+
+  - repo: Unidata/netcdf4-python
+    pypi_name: netCDF4
+    conda_package: netCDF4
+    appveyor_project: jswhit/netcdf4-python
+    badges: travis, appveyor, pypi, conda-forge, defaults
+
+
+- name: Niche packages
+
+  packages:
+
+  - repo: networkx/networkx
+    appveyor_project: dschult/networkx-pqott
+    badges: travis, appveyor, codecov, pypi, conda-forge, defaults
+
+  - repo: scikit-image/scikit-image
+    badges: travis, appveyor, codecov, pypi, conda-forge, defaults
+
+  - repo: SciTools/cartopy
+    badges: travis, appveyor, coveralls, pypi, conda-forge, defaults
+
+  - repo: geopandas/geopandas
+    badges: travis, coveralls, rtd, pypi, conda-forge, defaults
