--- a/tox.ini
+++ b/tox.ini
@@ -34,11 +34,9 @@ deps = notebooks: {[_notebooks]deps}
 
 [pytest]
 addopts = -v --pyargs --doctest-modules --doctest-ignore-import-errors
-norecursedirs = doc .git dist build _build .ipynb_checkpoints apps
+norecursedirs = doc .git dist build _build .ipynb_checkpoints
 nbsmoke_cell_timout = 360
-# notebooks to skip running; one case insensitive re to match per line
-# (so far just ones that haven't been setup to build properly)
-nbsmoke_skip_run = ^.*Carbon_Flux.ipynb$
-                   ^.*Heat_and_Trees.ipynb$
-                   ^.*Image_Classification.ipynb$
-                   ^.*Seattle_Lidar.ipynb$
+
+[flake8]
+include = *.py
+exclude = .git,__pycache__,.tox,.eggs,*.egg,doc,dist,build,_build,.ipynb_checkpoints
